--- a/server/data/styles.css
+++ b/server/data/styles.css
@@ -59,6 +59,7 @@ a {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 0px 20px 20px 20px; /* Add some padding */
     padding: 20px; /* Add some padding */
     box-sizing: border-box; /* Include padding in width */
 }
